crates/css_lexer/tests/snapshots/basic_snapshots__basic_nth.snap
---
source: crates/csskit_lexer/tests/basic_snapshots.rs
expression: tokens
---
[
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Function",
    "len": 10
  },
  {
    "kind": "Ident",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 2
  },
  {
    "kind": "RightParen",
    "len": 1
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  }
]
