crates/css_lexer/tests/snapshots/basic_snapshots__basic_vars.snap
---
source: crates/csskit_lexer/tests/basic_snapshots.rs
expression: tokens
---
[
  {
    "kind": "Ident",
    "len": 2
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 10
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Function",
    "len": 16
  },
  {
    "kind": "Ident",
    "len": 2
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Comma",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 11
  },
  {
    "kind": "Comma",
    "len": 1
  },
  {
    "kind": "Function",
    "len": 4
  },
  {
    "kind": "Ident",
    "len": 14
  },
  {
    "kind": "RightParen",
    "len": 1
  },
  {
    "kind": "Dimension",
    "len": 3,
    "unit": "%"
  },
  {
    "kind": "Comma",
    "len": 1
  },
  {
    "kind": "Function",
    "len": 4
  },
  {
    "kind": "Ident",
    "len": 14
  },
  {
    "kind": "RightParen",
    "len": 1
  },
  {
    "kind": "Dimension",
    "len": 3,
    "unit": "%"
  },
  {
    "kind": "Comma",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 11
  },
  {
    "kind": "RightParen",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  }
]
